--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://seeklogo.com/images/B/bkash-logo-F61DDB36A7-seeklogo.com.png" alt="bKash Logo" />
+      <img src="bkash.png" alt="bKash Logo" />
       <h1>Send Money</h1>
     </div>
     
