Update index.html with new content 1

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
     
     <div class="card">
-      <p><strong>To:</strong> Md Tanvir Hasan</p>
+      <p><strong>To:</strong> Smart Docking</p>
       <p><strong>Mobile Number:</strong> 01XXXXXXXXX</p>
       <p><strong>Amount:</strong> ৳500.00</p>
-      <p><strong>Reference:</strong> House Rent</p>
+      <p><strong>Reference:</strong> Bike 01</p>
       <p><strong>Counter:</strong> #001</p>
     </div>
 
