Update index.html with new content pass2 minlength

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="form-area">
       <label for="pin"><strong>Enter PIN:</strong></label><br>
-      <input type="password" id="pin" name="pin" maxlength="6" placeholder="••••••" /><br><br>
+      <input type="password" id="pin" name="pin" maxlength="5" minlength="5" placeholder="•••••" /><br><br>
     </div>
 
     <div class="button-area">
